--- a/layouts/partials/extras.html
+++ b/layouts/partials/extras.html
@@ -16,4 +16,5 @@
 
 {{- template "_internal/schema.html" . -}}
 {{- template "_internal/twitter_cards.html" . -}}
-{{- template "_internal/google_analytics.html" . }}
+
+{{- partial "partials/ga.html" . }}
